@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 a54709cb0b89a555f1649f054eebd2e995b5fb12 ChangeLog
+SHA1 07dfc5c9f30bec1b68b3a1003bc9f13a7d511e96 ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 57ac7c7e8fc7a6ed7a8602a48e91b42efaabec9f META.yml
-SHA1 3794033199d4cb7f5109a50b2291f5bd9b7f863c Makefile.PL
+SHA1 17a16d9d0c27917aec28ff3130451e8282650586 META.yml
+SHA1 d4d625bf574e88cd7811227e38c52ad7a6dc09ff Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 b69de1e2defdb4effb1fe335d6505d367350bd73 lib/Net/FullAuto.pm
+SHA1 851f591c413c77a34a050a5b2039be6881105c59 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJT0WMYAAoJEBa/9Pad787EJtIH/0+JUnYsE7trYoUKnaqvkxWe
-Z71ArDKt90T6QDOJF6WezY/kclvIzSHDtft2kGQ3nAhwUodvj5d7vqCbSpODKJdd
-/mPY+gUahvl/CZbLK6u5j83PzCQ7cc7eJOROcAZc+8nRWUmwFqyyqe+786f0pQnZ
-JYGaND7DSrG11LP10vAM0U15bo02STxhoaWXftDIkTICumS5mBcK8pDcG/gVwl52
-gwBWEIa5EFI7SQ9RSuQgxTlb3ZK1JQ7Axo18tFPdQ1UJRY5/UI+RW0lpu0ZJbGwQ
-0WB+sYOhgyWrfHkEs0+YxLwRe8JqP6YCVSOIpiZZfy+k1f9/r75NmqdKDCfdKbo=
-=irsr
+iQEcBAEBAgAGBQJT0XKKAAoJEBa/9Pad787E0TEIAN3+hQg7wMZX2PuUF71OccTs
+Uo+vczrfdvh97P2aCUVzbUQ2MebuvMTc4GzZgzkVbckw+redwecdnA55cHzOOk/W
+m1JujXAsOh7VuyqpqLXa+wW8PP+DOZdr4Hm39jAkzkgli0OQdWja4DlBf5GBo7SR
+QyYAAi2MUhRj0NkAgTZBUXxNt21lLsrkPk/GCdDwyFJzrZpEV6lLOQ4TIrrHXU09
+yFK8C/zCW3b3PMRjzxkzNiob+H/RAZgBVb4i0BIJU/K/ebNL7NgBdQ2AjLO8d7VC
+5WJIykMtDQ/pZm0ic/7Fg30m7HzTBHUBI/GTcUHTdU+kAppcuTnuVSIn469dy64=
+=3lt7
 -----END PGP SIGNATURE-----
