@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999975';
+our $VERSION='0.9999999976';
 
 
 use 5.005;
