@@ -22,6 +22,13 @@
 
 2014-07-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.9999999976 released.
+
+        * Fixed Makefile.PL for Amazon AMI.
+
+
+2014-07-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.9999999975 released.
 
         * Fixed Makefile.PL for Amazon AMI.
